# predictive-event-triggered-binding

./: .gitignore  README.md  RESULTS.md  pyproject.toml
configs/: babylm_100m.yaml  babylm_10m.yaml  babylm_10m_audit.yaml  babylm_10m_v2.yaml  babylm_10m_v2_audit.yaml  babylm_10m_v3_audit.yaml  babylm_10m_v4.yaml  babylm_10m_v4_audit.yaml  babylm_10m_v5.yaml  babylm_10m_v5_audit.yaml  babylm_10m_v6.yaml  babylm_10m_v6_audit.yaml  babylm_10m_v7.yaml  babylm_10m_v7_audit.yaml  babylm_10m_v7_publishable.yaml  full_eval_template.yaml  pilot_100k.yaml  smoke.yaml
data/fixtures/: tiny_corpus.txt  tiny_eval.txt
data/fixtures/blimp/: tiny.jsonl
docs/: full_evaluation.md  main_track_protocol.md
scripts/: build_insights_figures.py  build_insights_report.py  create_publishable_splits.py  fetch_babylm.py  prepare_eval_data.py  run_babylm_10m_audit_grid.sh  run_babylm_10m_v2_audit_grid.sh  run_babylm_10m_v2_targeted.sh  run_babylm_10m_v3_audit_grid.sh  run_babylm_10m_v4_audit_grid.sh  run_babylm_10m_v4_targeted.sh  run_babylm_10m_v5_audit_grid.sh  run_babylm_10m_v5_targeted.sh  run_babylm_10m_v6_proof.sh  run_babylm_10m_v6_targeted.sh  run_babylm_10m_v7_insights_fast_finish.sh  run_babylm_10m_v7_insights_finalizer.sh  run_babylm_10m_v7_proof.sh  run_babylm_10m_v7_publishable_grid.sh  run_babylm_10m_v7_targeted.sh  run_smoke.sh
src/etb/: __init__.py  baselines.py  claim_report.py  cli.py  config.py  flops.py  training.py  utils.py
tests/: test_config_and_tokenizer.py  test_insights_report.py  test_model.py  test_publishable_splits.py  test_training_and_eval.py
(+30 files in other folders)
