[project]
name = "predictive-etb"
version = "0.1.0"
description = "Predictive Event-Triggered Binding experiments for low-compute NLP"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Predictive ETB authors" }]
dependencies = [
  "datasets>=3.0.0",
  "huggingface-hub>=0.26.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "pytest>=8.2.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "tokenizers>=0.20.0",
  "torch>=2.3.0",
  "tqdm>=4.66.0",
  "transformers>=4.45.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
vsa = ["torch-hd>=5.7.0"]
eval = []
brainscore = ["brainscore-language>=2.2.0"]
dev = ["ruff>=0.8.0"]

[project.scripts]
etb = "etb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etb"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
